A test of a preview feature: StructuredTaskScope